Added function that make supervisioned comparissons and pairwise graphs, still need to add more data tests

--- a/training/superv_comparisons.Rmd
+++ b/training/superv_comparisons.Rmd
@@ -53,52 +53,7 @@ colnames(sim.data) = c("X1", "X2", "Y")
 row.names(sim.data) = c(1:nrow(sim.data))
 head(sim.data, 4)
 ```
-So lets make some tests:
-```{r}
-lvls = levels(sim.data$Y)
-tam = length(lvls)
-relab_y = mapvalues(sim.data$Y, from = lvls, to = 1:tam)
-relab_y
-new_lvls = levels(relab_y)
-```
-And now testing some hierarchical clustering without the ground truth label:
-```{r}
-test_data = sim.data[, -3]
-d = dist(test_data)
-diana1 = diana(d)
-diana2 = diana(d, diss = T)
-```
-```{r}
-test.wd_hc = scale(test_data) %>%
-  dist() %>%
-  hclust()
-cluster = factor(cutree(test.wd_hc, k = 2))
-cluster
-```
-```{r}
-test.diana = scale(test_data) %>%
-  diana()
-fit = cutree(test.diana, k = 2)
-fit
-```
-
-
-```{r}
-perms = permutations(n = tam, r = tam,v =  new_lvls)
-perms
-```
-And now, we can obtain all possible combinations of cluster labels:
-```{r}
-hits = numeric(nrow(perms))
-for(i in (1:nrow(perms))){
-  new_clust = mapvalues(cluster, from = levels(cluster), to = perms[i, ])
-  temp_hit = (sum(new_clust == relab_y)/length(relab_y))
-  hits[i] = temp_hit
-}
-hits
-which.max(hits)
-```
-Based on this, we can make a comparison function between a supervised learning prediction score computed into hierarchical clustering with ward.D2 method with our score:
+We can make a comparison function between a supervised learning prediction score computed into hierarchical clustering with ward.D2 method with our score:
 ```{r}
 tic("Time of the supervised comparison")
 comp = supervised_comparing(sim.data, clust = "hclust", clust_method = "ward.D2", test_index = 3)
@@ -133,11 +88,43 @@ data.test %>%
 ```
 \
 ```{r}
-dists = c("euclidean", "manhattan", "canberra", "minkowski")
+sim.fom = FOM(sim.data[, -3], nlvls = 2, test.list)
+```
+```{r}
+sim.fom
+```
+FOM versus score:
+```{r}
+data.test$FOM = sim.fom$V1
+data.test %>%
+  mutate(names = rownames(data.test)) %>% 
+  ggplot(aes(x = FOM, y = V3)) +
+  geom_point(color = "red") +
+  labs(x = "FOM score",
+       y = "Scores") +
+  theme_minimal()
+```
+
+```{r}
+dists = c("euclidean", "manhattan", "canberra")
 tic("Running time for all_supervised_comparing")
 data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 3, dist = dists)
 data.test
 toc()
+```
+Computing FOM:
+```{r}
+sim.fom = FOM(sim.data[, -3], nlvls = 2, test.list, dists = dists)
+```
+```{r}
+sim.fom = sim.fom %>%
+  dplyr::arrange(V2)
+
+# arranging data.test
+data.test = data.test %>%
+  dplyr::arrange(V4)
+sim.fom$V1 = as.numeric(sim.fom$V1)
+sim.fom
 ```
 Graphing the comparison acording to distance:
 ```{r echo=TRUE}
@@ -176,8 +163,277 @@ data.test %>%
   scale_colour_brewer(palette = "Set1")
 ```
 ```{r}
-cor(data.test$V2, data.test$V3, method = "spearman")
+data.test$FOM = sim.fom$V1
+data.test %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
 ```
+
+```{r}
+cor(data.test$FOM, data.test$V3, method = "spearman")
+```
+Increasing sample size:
+```{r}
+set.seed(500)
+n = 550
+p = 2
+
+Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+mu_0 = c(0, 0)
+mu_1 = c(1, 2)
+S = cbind(c(2, 1), c(1, 3))
+
+
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+```
+```{r}
+dists = c("euclidean", "manhattan", "canberra")
+tic("Running time for all_supervised_comparing")
+data.test2 = all_supervised_comparing(sim.data, clust = test.list, test_index = 3, dist = dists)
+data.test2
+toc()
+```
+```{r}
+sim.fom2 = FOM(sim.data[, -3], nlvls = 2, test.list, dists = dists)
+sim.fom2 = sim.fom2 %>%
+  dplyr::arrange(V2)
+
+# arranging data.test
+data.test2 = data.test %>%
+  dplyr::arrange(V4)
+sim.fom2$V1 = as.numeric(sim.fom2$V1)
+sim.fom2
+```
+```{r}
+data.test2 = data.test2 %>%
+  mutate(V1 = as.numeric(V1),
+         V2 = as.numeric(V2),
+         V3 = as.numeric(V3),
+         V4 = as.factor(V4))
+data.test2 %>%
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+data.test2 %>%
+  ggplot(aes(x = V2, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+data.test2$FOM = sim.fom2$V1
+data.test2 %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+cor(data.test2$FOM, data.test2$V3, method = "spearman")
+```
+Repeating all the proccess for more separated data:
+```{r}
+set.seed(150)
+n = 170
+p = 2
+
+Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+mu_0 = c(0, 0)
+mu_1 = c(6, 8)
+S = diag(nrow = 2, ncol = 2)
+
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+```
+```{r}
+dists = c("euclidean", "manhattan", "canberra")
+tic("Running time for all_supervised_comparing")
+data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 3, dist = dists)
+data.test
+toc()
+```
+Computing FOM:
+```{r}
+sim.fom = FOM(sim.data[, -3], nlvls = 2, test.list, dists = dists)
+```
+```{r}
+sim.fom = sim.fom %>%
+  dplyr::arrange(V2)
+
+# arranging data.test
+data.test = data.test %>%
+  dplyr::arrange(V4)
+sim.fom$V1 = as.numeric(sim.fom$V1)
+sim.fom
+```
+Graphing the comparison acording to distance:
+```{r echo=TRUE}
+data.test = data.test %>%
+  mutate(V1 = as.numeric(V1),
+         V2 = as.numeric(V2),
+         V3 = as.numeric(V3),
+         V4 = as.factor(V4))
+data.test %>%
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+data.test$FOM = sim.fom$V1
+data.test %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+
+```{r}
+cor(data.test$FOM, data.test$V3, method = "spearman")
+```
+Increasing sample size:
+```{r}
+set.seed(500)
+n = 550
+p = 2
+
+Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+mu_0 = c(0, 0)
+mu_1 = c(6, 8)
+S = diag(nrow = 2, ncol = 2)
+
+
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+```
+```{r}
+dists = c("euclidean", "manhattan", "canberra")
+tic("Running time for all_supervised_comparing")
+data.test2 = all_supervised_comparing(sim.data, clust = test.list, test_index = 3, dist = dists)
+data.test2
+toc()
+```
+```{r}
+sim.fom2 = FOM(sim.data[, -3], nlvls = 2, test.list, dists = dists)
+sim.fom2 = sim.fom2 %>%
+  dplyr::arrange(V2)
+
+# arranging data.test
+data.test2 = data.test2 %>%
+  dplyr::arrange(V4)
+sim.fom2$V1 = as.numeric(sim.fom2$V1)
+sim.fom2
+```
+```{r}
+data.test2 %>%
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+data.test2$FOM = sim.fom2$V1
+data.test2 %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+cor(data.test2$FOM, data.test2$V3, method = "spearman")
+```
+
 Testing iris dataset:
 ```{r}
 flowers = iris
@@ -185,6 +441,19 @@ tic("Running time for all_supervised_comparing in iris dataset")
 iris.test = all_supervised_comparing(flowers, clust = test.list, test_index = 5, dist = dists)
 iris.test
 toc()
+```
+```{r}
+iris.fom = FOM(flowers[, -5], nlvls = 3, test.list, dists = dists)
+```
+```{r}
+iris.fom = iris.fom %>%
+  dplyr::arrange(V2)
+
+# arranging data.test
+iris.test = iris.test %>%
+  dplyr::arrange(V4)
+iris.fom$V1 = as.numeric(iris.fom$V1)
+iris.fom
 ```
 And then, graphing it:
 **Proportion of hits versus Score values**
@@ -227,12 +496,51 @@ iris.test %>%
   scale_colour_brewer(palette = "Set1")
 ```
 \
+```{r}
+iris.test$FOM = iris.fom$V1
+iris.test %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+
+cor(iris.test$FOM, iris.test$V3, method = "kendall")
+```
 Testing supervisioned comparisson for cross validation score
+```{r}
+set.seed(500)
+n = 170
+p = 2
+
+Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+mu_0 = c(0, 0)
+mu_1 = c(1, 2)
+S = cbind(c(2, 1), c(1, 3))
+
+
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+```
 ```{r}
 cl.list = list(hclust = c("single","ward.D2", "mcquitty", "average", "centroid", "complete",
                           "ward.D"), 
-               agnes = c("weighted", "average"), diana = NULL)
-dists = c("euclidean", "manhattan", "canberra", "maximum")
+               agnes = c("weighted", "average"), diana = NA)
+dists = c("euclidean", "manhattan", "canberra")
 tic("Running time for all_supervised_comparing")
 cv.data.test = supervised_comparing_L_cross_val(sim.data, cl.list, test_index = 3, 
                                              dists = dists)
@@ -241,7 +549,7 @@ toc()
 ```
 ```{r}
 cv.data.test %>%
-  ggplot(aes(x = V1, y = hits, colour = dist_names)) +
+  ggplot(aes(x = V1, y = hits, colour = V2)) +
   geom_point() +
   theme_minimal() +
   labs(x = "Scores",
@@ -257,7 +565,7 @@ cv.data.test %>%
 ```
 ```{r}
 cv.data.test %>%
-  ggplot(aes(x = V1, y = F1, colour = dist_names)) +
+  ggplot(aes(x = V1, y = F1, colour = V2)) +
   geom_point() +
   theme_minimal() +
   labs(x = "Scores",
@@ -271,9 +579,307 @@ cv.data.test %>%
   scale_colour_brewer(palette = "Set1") +
   coord_flip()
 ```
+```{r}
+cv.data.test = cv.data.test %>%
+  dplyr::arrange(V2)
 
+cv.fom = FOM(sim.data[, -3], nlvls = 2, cl.list, dists = dists)
+cv.fom$V1 = as.numeric(cv.fom$V1)
+cv.fom = cv.fom %>%
+  dplyr::arrange(V2)
+cv.data.test$FOM = cv.fom$V1
+```
 
+```{r}
+cv.data.test %>%
+  ggplot(aes(x = V1, y = FOM, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Scores",
+       y = "FOM score",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5))+
+  scale_colour_brewer(palette = "Set1") +
+  coord_flip()
+```
+\
+To facilitate further investigations on several datasets, we can draft a function that make pairwise graphs of FOM and our score versus the other variables:
+```{r}
+# function for default score:
+display.superv_comp = function(data, clust.list, test_index, dist = NA){
+  k = nlevels(data[, test_index])
+  data.test = all_supervised_comparing(data, clust = clust.list, test_index = test_index, dist = dist)
+  fom.test = FOM(data[, -(test_index)], nlvls = k, clust.list, dist)
+  # arranging datas
+  fom.test = fom.test %>%
+  dplyr::arrange(V2)
+  data.test = data.test %>%
+  dplyr::arrange(V4)
+  fom.test$V1 = as.numeric(fom.test$V1)
+  data.test$FOM = fom.test$V1
+  
+  # graphing and displaying correlations
+  g1 = data.test %>%
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g2 = data.test %>%
+  ggplot(aes(x = V2, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g3 = data.test %>%
+  ggplot(aes(x = FOM, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g4 = data.test %>%
+  ggplot(aes(x = V1, y = FOM, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus FOM Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g5 = data.test %>%
+  ggplot(aes(x = V2, y = FOM, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus FOM Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  show(g1)
+  show(g2)
+  show(g3)
+  cat("Correlations between score and other variables: \n")
+  cat("Score versus proportion of hits: ", cor(data.test$V3, data.test$V1), "\n")
+  cat("Score versus F1: ", cor(data.test$V3, data.test$V2), "\n")
+  cat("Score versus FOM: ", cor(data.test$V3, data.test$FOM), "\n")
+  
+  show(g4)
+  show(g5)
+  cat("Correlations between FOM and other variables: \n")
+  cat("FOM versus F1: ", cor(data.test$FOM, data.test$V2), "\n")
+  cat("FOM versus proportion of hits: ", cor(data.test$FOM, data.test$V1), "\n")
+}
 
+CV_display.superv_comp = function(data, clust.list, test_index, dist = NA){
+  k = nlevels(data[, test_index])
+  data.test = supervised_comparing_L_cross_val(data, clust.list, test_index = test_index, dists = dist)
+  fom.test = FOM(data[, -(test_index)], nlvls = k, clust.list, dist)
+  # arranging datas
+  
+  data.test = data.test %>%
+  dplyr::arrange(V2)
+  
+  fom.test$V1 = as.numeric(fom.test$V1)
+  fom.test = fom.test %>%
+  dplyr::arrange(V2)
+  data.test$FOM = fom.test$V1
+  
+  # graphing and displaying correlations
+  g1 = data.test %>%
+  ggplot(aes(x = hits, y = V1, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g2 = data.test %>%
+  ggplot(aes(x = F1, y = V1, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g3 = data.test %>%
+  ggplot(aes(x = FOM, y = V1, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "FOM score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of FOM versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g4 = data.test %>%
+  ggplot(aes(x = hits, y = FOM, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Proportion of hits",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus FOM Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  g5 = data.test %>%
+  ggplot(aes(x = F1, y = FOM, colour = V2)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus FOM Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+  
+  show(g1)
+  show(g2)
+  show(g3)
+  cat("Correlations between cross validated score and other variables: \n")
+  cat("Score versus proportion of hits: ", cor(data.test$V1, data.test$hits), "\n")
+  cat("Score versus F1: ", cor(data.test$V1, data.test$F1), "\n")
+  cat("Score versus FOM: ", cor(data.test$V1, data.test$FOM), "\n")
+  
+  show(g4)
+  show(g5)
+  cat("Correlations between FOM and other variables: \n")
+  cat("FOM versus F1: ", cor(data.test$FOM, data.test$hits), "\n")
+  cat("FOM versus proportion of hits: ", cor(data.test$FOM, data.test$F1), "\n")
+}
+
+data.generator = function(n, mu_0, mu_1, p = 2, S = NULL, seed = 500){
+  set.seed(seed)
+  Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+  mu_0 = c(0, 0)
+  mu_1 = c(1, 2)
+  if(is.null(S) == T) S = diag(nrow = p, ncol = p)
+  X = matrix(nrow = n, ncol = p)
+  X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+  X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+  sim.data = as.data.frame(cbind(X , Y))
+  sim.data$Y = as.factor(Y)
+  if(p == 2){
+  colnames(sim.data) = c("X1", "X2", "Y")}
+  row.names(sim.data) = c(1:nrow(sim.data))
+  return(sim.data)
+}
+```
+Repeating simulation again:
+```{r}
+n = 170
+p = 2
+mu_0 = c(0, 0)
+mu_1 = c(1, 2)
+S = cbind(c(2, 1), c(1, 3))
+sim.data = data.generator(n, mu_0, mu_1, S = S)
+head(sim.data, 4)
+```
+```{r}
+display.superv_comp(sim.data, test.list, test_index = 3, dist = dists)
+```
+For separated data:
+```{r}
+n = 170
+p = 2
+mu_0 = c(0, 0)
+mu_1 = c(6, 8)
+sim.data = data.generator(n, mu_0, mu_1, seed = 150)
+head(sim.data, 4)
+```
+```{r}
+display.superv_comp(sim.data, test.list, test_index = 3, dist = dists)
+```
+```{r}
+n = 500
+p = 2
+mu_0 = c(0, 0)
+mu_1 = c(2, 2)
+sim.data = data.generator(n, mu_0, mu_1, seed = 150)
+head(sim.data, 4)
+```
+```{r}
+display.superv_comp(sim.data, test.list, test_index = 3, dist = dists)
+```
+```{r}
+flowers = iris
+display.superv_comp(flowers, test.list, test_index = 5, dist = dists)
+```
+```{r}
+n = 170
+p = 2
+mu_0 = c(0, 0)
+mu_1 = c(1, 2)
+S = cbind(c(2, 1), c(1, 3))
+sim.data = data.generator(n, mu_0, mu_1, S = S)
+head(sim.data, 4)
+```
+```{r}
+tic("Running time for cv_superv_comp")
+CV_display.superv_comp(sim.data, test.list, test_index = 3, dist = dists)
+toc()
+```
 
 
 
