--- a/training/superv_comparisons.Rmd
+++ b/training/superv_comparisons.Rmd
@@ -6,6 +6,7 @@ output:
   word_document: default
 ---
 ```{r global_options}
+knitr::opts_chunk$set(echo = T, out.width = '85%', fig.align = "center", warning = F)
 ```
 Importing needed packages
 ```{r message = FALSE}
@@ -442,7 +443,7 @@ iris.test = all_supervised_comparing(flowers, clust = test.list, test_index = 5,
 iris.test
 toc()
 ```
-```{r}
+```{r warning = F}
 iris.fom = FOM(flowers[, -5], nlvls = 3, test.list, dists = dists)
 ```
 ```{r}
@@ -697,15 +698,16 @@ display.superv_comp = function(data, clust.list, test_index, dist = NA){
   show(g2)
   show(g3)
   cat("Correlations between score and other variables: \n")
-  cat("Score versus proportion of hits: ", cor(data.test$V3, data.test$V1), "\n")
-  cat("Score versus F1: ", cor(data.test$V3, data.test$V2), "\n")
-  cat("Score versus FOM: ", cor(data.test$V3, data.test$FOM), "\n")
+  cat("Score versus proportion of hits: ", cor(data.test$V3, data.test$V1, method = "spearman"), "\n")
+  cat("Score versus F1: ", cor(data.test$V3, data.test$V2, method = "spearman"), "\n")
+  cat("Score versus FOM: ", cor(data.test$V3, data.test$FOM, method = "spearman"), "\n")
   
   show(g4)
   show(g5)
   cat("Correlations between FOM and other variables: \n")
-  cat("FOM versus F1: ", cor(data.test$FOM, data.test$V2), "\n")
-  cat("FOM versus proportion of hits: ", cor(data.test$FOM, data.test$V1), "\n")
+  cat("FOM versus F1: ", cor(data.test$FOM, data.test$V2, method = "spearman"), "\n")
+  cat("FOM versus proportion of hits: ", cor(data.test$FOM, data.test$V1, method = "spearman"), "\n")
+  return(data.test)
 }
 
 CV_display.superv_comp = function(data, clust.list, test_index, dist = NA){
@@ -806,13 +808,12 @@ CV_display.superv_comp = function(data, clust.list, test_index, dist = NA){
   cat("Correlations between FOM and other variables: \n")
   cat("FOM versus F1: ", cor(data.test$FOM, data.test$hits), "\n")
   cat("FOM versus proportion of hits: ", cor(data.test$FOM, data.test$F1), "\n")
+  return(data.test)
 }
 
 data.generator = function(n, mu_0, mu_1, p = 2, S = NULL, seed = 500){
   set.seed(seed)
   Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
-  mu_0 = c(0, 0)
-  mu_1 = c(1, 2)
   if(is.null(S) == T) S = diag(nrow = p, ncol = p)
   X = matrix(nrow = n, ncol = p)
   X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
@@ -880,6 +881,46 @@ tic("Running time for cv_superv_comp")
 CV_display.superv_comp(sim.data, test.list, test_index = 3, dist = dists)
 toc()
 ```
+Importing and testing real datasets: \
+**Wheat seeds dataset**
+```{r}
+# wheat seeds dataset
+wheat_data = read.delim("C:/Users/lucru/Estatística_UFSCar/cv_cluster/data/seeds_dataset.txt")
+wheat_data$X1 = as.factor(wheat_data$X1)
+head(wheat_data)
+```
+```{r}
+tic("Running time for supervisioned comparisson in wheat seeds dataset")
+display.superv_comp(wheat_data, test.list, test_index = 8, dist = dists)
+toc()
+```
+\
+**Prima indians diabetes dataset**
+```{r}
+# prima indians dataset
+library(data.table)
+prima_data <- as.data.frame(fread('https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.csv'))
+prima_data$V9 = as.factor(prima_data$V9)
+head(prima_data)
+```
+```{r}
+tic("Running time for supervisioned comparisson in prima indians diabetes dataset")
+display.superv_comp(prima_data, test.list, test_index = 9, dist = dists)
+toc()
+```
+\
+**Ionosphere dataset**
+```{r}
+ionosphere_data = as.data.frame(read.table("https://archive.ics.uci.edu/ml/machine-learning-databases/ionosphere/ionosphere.data", sep = ","))
+ionosphere_data$V35 = as.factor(ionosphere_data$V35)
+head(ionosphere_data)
+```
+```{r}
+tic("Running time for supervisioned comparisson in ionosphere dataset")
+display.superv_comp(ionosphere_data, test.list, test_index = 35, dist = dists)
+toc()
+```
+
 
 
 
